# nix-env-rebuild

./: .gitignore  LICENSE  README.md  default.nix  fixup-release-files.sh  nix-env-rebuild.cabal  notes.org  shell.nix
src/: Main.hs  Utils.hs
src/Nix/: Commands.hs  EnvRebuild.hs  OutputParser.hs  Packages.hs  StorePaths.hs  Types.hs  Utils.hs
src/Nix/Test/: EnvRebuild.hs
